--- a/QuickLink/QuickLinkTests/Info.plist
+++ b/QuickLink/QuickLinkTests/Info.plist
@@ -18,5 +18,7 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Accessing your contacts to QuickLink other users!</string>
 </dict>
 </plist>
